--- a/227/index.html
+++ b/227/index.html
@@ -5,17 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JavaScript Introduction</title>
-    <script>
-
-        let greetingText='Hi, I\'m Max!'
-        let age=32
-        alert(greetingText)
-        alert(greetingText)
-        greetingText='Hi, I\'m really  Max!'
-        alert(greetingText)
-        alert(age)
-        
-    </script>
+    <script src="app.js"></script>
 </head>
 <body>
     
