--- a/tictactoe/index.html
+++ b/tictactoe/index.html
@@ -23,7 +23,7 @@
             <header>
             <h2>Choose your name</h2></header>
             <form action="">
-                <div>
+                <div class="form-control">
                     <label for="playername">Player name</label>
                     <input type="text" name="playername" id="playername"/>
                 </div>
